LITT Changelog:
===============

 * 2019-08-29: Now uses a switch for the action selection with constexpr action hashing!
               Code size decreased 12.5KB (VS2019) and should be faster too hopefully! 
               Smaller decrease on VS2017, less than 1KB, but was smaller already.
 * 2019-08-29: No need for m_endOfOption after last change!
 * 2019-08-28: OptionParser now allows empty option values (like -c) and separators at the end (=> eof).
 * 2019-08-28: OptionParser now uses std::string instead of std::stringstream.
 * 2019-08-28: OutputQuery now uses std::string instead of std::stringstream for building query.
 * 2019-08-28: addAuxTables now uses JOIN or LEFT JOIN depending on startTable.
 * 2019-08-28: Added more count virtual columns:
               * abc, abcr, agc - Author book count, with re-reads, and genre count
               * gbc, gac - Genre book count and author count
               * cbc, sebc, sobc - Category, series and source book count
               * lbc, obc - Language and original language book count
               (Renamed sr to sor)
               * ser - Average rating for series
 * 2019-08-28: Bug fix: If a column was used as second operand in WHERE then it was not
               included in used columns.
 * 2019-08-28: Can now use -c option with xbc listings and not get tables for the default
               columns joined in the query.
 * 2019-08-28: Added SQLite compile option SQLITE_TEMP_STORE=3 (always memory) and removed 
               code to set PRAGMA temp_store = 2.
               Added SQlite compile option SQLITE_DEFAULT_FOREIGN_KEYS=1 (on) and removed
               code to set PRAGMA foreign_keys = ON.
 * 2019-08-27: Moved the changelog to "Changelog.txt" instead of having it in "litt.cpp".
               Also added contents of oldlitt.btm changelog here at the bottom!
 * 2019-08-27: Changes in story virtual columns to make them more logical and useful: