@@ -1,6 +1,9 @@
 LITT Changelog:
 ===============
 
+ * 2019-08-30: Added virtual count columns for pseudonyms:
+               * abcp - As abc with pseudonyms included for MainID
+               * agcp - As agc with pseudonyms included for MainID
  * 2019-08-29: Now uses a switch for the action selection with constexpr action hashing!
                Code size decreased 12.5KB (VS2019) and should be faster too hopefully! 
                Smaller decrease on VS2017, less than 1KB, but was smaller already.
